--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a recent graduate from Univeristy of Arizona</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Connecticut</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies are; reading, going out with friends and drawing</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to have the ability to affect upcoming generations and the community around me through coding</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Connecticut</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer because I believe the future is headed into an era of technology.</p>
     </section>
 
     <footer id="footer">
